# SynQc-TDS-controller

./: ANIMATED_UPGRADES.md  BACKEND_TEST_SUMMARY.md  CODE_CHANGES_REFERENCE.md  COMPLETION_CHECKLIST.md  Dockerfile  FINAL_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  TEST_REPORT.md  adac1680-4fd6-4140-8698-e8e2e17aa7ea (1).html  docker-compose.yml  pyproject.toml  quick_test.py  requirements.txt  run_backend_tests.py  synqc_agent.py  synqc_control_panel.html  synqc_frontend_improved.html  synqc_tds_integration_snippets.md  synqc_tds_super_backend.py  test_backend.py  test_import.py
.github/workflows/: smoke-test.yml
docs/: CODE_CHANGES_REFERENCE.md  COMPLETION_CHECKLIST.md  FINAL_VERIFICATION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README_NEW.md  synqc_tds_integration_snippets.md
frontend/legacy/: adac1680-4fd6-4140-8698-e8e2e17aa7ea (1).html  synqc_frontend_improved.html
scripts/: smoke_test.sh
static/: index.html
synqc_tds/: __init__.py  api.py  engine.py  hardware_backends.py  models.py
ui_static/: app.js  style.css
