[project]
name = "synqc-tds-controller"
version = "0.3.0"
description = "SynQc Temporal Dynamics Series FastAPI backend"
authors = [{ name = "SynQc Labs" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
